--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@types/node": "^20.5.9"
   },
   "scripts": {
-    "start": "node public/server.js"
+    "start": "node public/server.js",
+    "test": "node public/index.js"
   }
 }
